--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -8,20 +8,38 @@
 	left: 0;
 	width: 100%;
 	text-align: center;
-}
+	}
 	&__title {
 	font-weight: 300;
 	color: $mainBlue;
-	font-size: 4.8rem;
+	font-size: 1.1rem;
 	margin:0;
-}
+	
+	@mixin atSmall {
+		font-size: 2rem;
+	}
+	
+	@mixin atMedium {
+		font-size: 3.2rem;
+	}
+	
+	@mixin atLarge {
+		font-size: 4.8rem;
+	}
+	
+	}
+
 
 	&__subtitle {
 	font-weight: 300;
 	color: $mainBlue;
-	font-size: 2.9rem;
+	font-size: 1.1rem;
 	margin: 0;
-}
+	
+	@mixin atSmall {
+		font-size: 2.9rem;
+	}
+	}
 	&__description {
 	color: #fff;
 	font-size: 1.875rem;
@@ -29,7 +47,7 @@
 	text-shadow: 2px 2px 0, rgba(0,0,0,.1);
 	max-width: 30rem;
 	margin: 0 auto;
-}
+	}
 
 }
 
