--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -4,9 +4,14 @@ body {
 }
 
 img {
-	max-width: 100%;	
+	max-width: 100%;
+	height: auto;
 }
 
 * {
 	box-sizing: border-box;
+}
+
+a {
+	color: $mainOrange;
 }
