--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,14 +1,32 @@
 .row {
-	
+
 	@mixin clearfix;
 	
 	&--gutters {
 		padding-right: -65px;
 	}
 	
-	&--gutters > div {
-		padding-right: 65px;		
+	&--gutters-large {
+		padding-right: -100px;
 	}
+	
+	&--gutters > div {
+		padding-right: 0;
+		@mixin atSmall {
+			padding-right: 65px;
+		}	
+	}
+	
+
+		
+	&--gutters-large > div {
+		padding-right: 0;
+		@mixin atSmall {
+			padding-right: 100px;
+		}		
+	}
+	
+	
 	
 	&__b-margin-until-medium {
 		margin-bottom: 1rem;
@@ -26,7 +44,13 @@
 		}
 		
 		&__medium-4--larger {
+			float: left;
 			width: 37%;
+		}
+		
+		&__medium-6 {
+			float: left;
+			width: 50%;
 		}
 		
 		&__medium-8 {
