--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,12 +2,20 @@
 
 	@mixin clearfix;
 	
+	&--t-padding {
+		padding-top: 80px;
+	}
+	
 	&--gutters {
 		padding-right: -65px;
 	}
 	
 	&--gutters-large {
 		padding-right: -100px;
+	}
+	
+	&--gutters-small {
+		padding-right: -45px;
 	}
 	
 	&--gutters > div {
@@ -23,6 +31,13 @@
 		padding-right: 0;
 		@mixin atSmall {
 			padding-right: 100px;
+		}		
+	}
+	
+	&--gutters-small > div {
+		padding-right: 0;
+		@mixin atSmall {
+			padding-right: 45px;
 		}		
 	}
 	
@@ -60,6 +75,17 @@
 		
 		&__medium-8--smaller {
 			width: 63%;
+		}
+	}
+	
+	/* Begin Equal Height rules */
+	&--equal-height-at-medium {
+		@mixin atMedium {
+			display: flex;
+		}
+		& > div {
+			float: none;
+			display: flex;
 		}
 	}
 }
