--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -49,7 +49,12 @@
 	
 	&__menu-content {
 		display: none;
+		
 		@mixin atMedium {
+			display: block;
+		}
+		
+		&--is-visible {
 			display: block;
 		}
 	}
